--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>NEVER GIVE UP!!</title>
   </head>
   <body>
-    <video width="1080" height="720" controls autoplay>
+    <video width="65%" height="100%" autoplay>
       <source src="inspirational_message.mp4" type=video/mp4>
     </video>
 </html>
