--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>NEVER GIVE UP!!</title>
   </head>
   <body>
-    <video width="64%" height="100%" autoplay>
-      <source src="inspirational_message.mp4" type=video/mp4>
+    <video width="100%" autoplay>
+      <source src="inspirational_message_2.mp4" type=video/mp4>
     </video>
 </html>
